# smart_parallelize

./: .gitignore  README.md  pyproject.toml  run_tests.py
smart_parallelize/: parallelize.py  parallelize_DEP.py  parallelize_native.py  test.py  testing.py
