[tool.poetry]
name = "smart-parallelize"
version = "1.0.4"
description = ""
authors = ["Truman DeWalch <trumandewalch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
ray = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
