[tool.poetry]
name = "smart-parallelize"
version = "2.0.2"
description = ""
authors = ["Truman DeWalch <trumandewalch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
ray = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
