[tool.poetry]
name = "smart-parallelize"
version = "2.3.1"
description = ""
authors = ["Truman DeWalch <trumandewalch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
ray = "^2.10.0"
pathos = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
